# icelandic-asr-api

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
icelandic_asr/: __init__.py  server.py
test-audio/: 01.txt  03.txt  06.txt
tests/: verify_transcriptions.py
